fix: incorrect no poop icon color in dark mode

--- a/src/app/modules/deleted-notes-list/icon-no-poop/icon-no-poop.component.scss
+++ b/src/app/modules/deleted-notes-list/icon-no-poop/icon-no-poop.component.scss
@@ -2,6 +2,7 @@ svg {
   width: 100px;
   height: 100px;
   cursor: default;
+  fill: var(--default-color);
 
   &:hover {
     transform: scale(1);
